applications/mario/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: mario
  name: mario
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mario
  template:
    metadata:
      labels:
        name: mario
    spec:
      containers:
      - image: quay.io/vergiexsys/demo-games-supermario 
        name: mario
        ports:
        - containerPort: 8080
          name: http-server
