applications/mario/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario
  labels:
    name: mario
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: mario
