applications/mario/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wildwest-app
  namespace: wildwest
  labels:
    app: wildwest
spec:
  to:
    kind: Service
    name: wildwest
    weight: 100
  port:
    targetPort: wildwest
  wildcardPolicy: None
